# AITrading

./: MANIFEST.in  config.yaml  pyproject.toml  pytest.ini  requirements.txt  run_backtest.py  setup.cfg  test_model.py  test_tensorflow.py
results/: backtest_metrics.csv  backtest_trades.csv  raw_data.csv
trading_bot/: __init__.py  setup.py
trading_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
trading_bot/analysis/: __init__.py  analyzer.py  indicators.py  order_flow.py
trading_bot/backtesting/: engine.py
trading_bot/core/: __init__.py  interfaces.py  models.py
trading_bot/exchange/: __init__.py  bybit_connector.py  client.py  repository.py
trading_bot/risk/: position_manager.py
trading_bot/tests/: __init__.py  conftest.py  test_analysis.py  test_basic.py  test_exchange.py  test_position_manager.py
